# sciLaMA

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
script/: template.yaml
src/: config.py  geneVAE.py  peakVAE.py  utils.py
src/sciLaMA/: __init__.py  callbacks.py  config.py  data.py  loss.py  metrics.py  model.py  model_lit.py  trainer.py  utils.py
