[project]
name = "sciLaMA"
version = "0.1.0"
description = "sciLaMA: A Single-Cell Representation Learning Framework to Leverage Prior Knowledge from Large Language Models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "pytorch-lightning>=1.5.0",
    "numba>=0.59.0",
    "scanpy>=1.8.0",
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.60.0",
    "scikit-learn>=1.0.0",
    "pyarrow>=6.0.0",
    "torchmetrics>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sciLaMA"]
