[project]
name = "sciLaMA"
version = "0.1.0"
description = "sciLaMA: A Single-Cell Representation Learning Framework to Leverage Prior Knowledge from Large Language Models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "db-dtypes>=1.4.3",
    "google-cloud-bigquery>=3.34.0",
    "google-cloud-storage>=3.1.0",
    "ipython>=9.2.0",
    "mlflow>=2.22.0",
    "numpy>=2.2.6",
    "polars>=1.30.0",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "pytorch-ignite>=0.5.2",
    "pytorch-lightning>=1.5.0",
    "standard-imghdr>=3.13.0",
    "torch>=2.7.0",
    "torch-tb-profiler>=0.4.3",
    "torchdata>=0.11.0",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "triton>=3.3.1",
    "scanpy>=1.11.3",
    "muon>=0.1.7",
    "scib>=1.1.6",
    "leidenalg>=0.10.2",
    "umap-learn>=0.5.6",
    "gcsfs>=2025.9.0",
    "pyspark>=4.0.1",
    "lifelines>=0.30.0",
    "scikit-survival>=0.25.0",
    "torchmetrics>=1.8.2", 
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sciLaMA"]
